fix(TDP-11557): invisible pin header button in FFX (#4405)

--- a/packages/datagrid/src/components/PinHeaderRenderer/PinHeaderRenderer.module.scss
+++ b/packages/datagrid/src/components/PinHeaderRenderer/PinHeaderRenderer.module.scss
@@ -4,8 +4,4 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
-	svg {
-		transform: rotate(90deg);
-	}
 }
